--- a/http/user.html
+++ b/http/user.html
@@ -36,7 +36,7 @@ SPDX-License-Identifier: AGPL-3.0-only
   <body>
     <header class="container">
       <hgroup>
-        <h1><a href="/">maxhash.io</a></h1>
+        <h1><a href="/">maxhash.io (beta)</a></h1>
         <p>A high performance Bitcoin solo mining pool</p>
       </hgroup>
       <nav>
