Serve Pico CSS directly.

--- a/http/user.html
+++ b/http/user.html
@@ -10,7 +10,7 @@ SPDX-License-Identifier: AGPL-3.0-only
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="light dark" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.1.1/css/pico.min.css" />
+    <link rel="stylesheet" href="/static/pico.min.css" />
     <title>User Statistics | maxhash.io Bitcoin Mining Pool</title>
     <meta
       name="description"
