--- a/http/static/user.html
+++ b/http/static/user.html
@@ -1,4 +1,8 @@
-<!doctype html><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport><meta content="light dark" name=color-scheme><link href=/static/pico.min.css rel=stylesheet><title>User Statistics | maxhash.io Bitcoin Mining Pool</title><meta content="View detailed Bitcoin mining statistics, hashrate, shares, and worker performance for your user account on maxhash.io." name=description><meta content="Bitcoin mining, mining pool, user statistics, hashrate, shares, workers, maxhash.io, solo mining" name=keywords><link href=https://maxhash.io/user rel=canonical><meta content="User Statistics | maxhash.io Bitcoin Mining Pool" property=og:title><meta content="Check your Bitcoin mining user statistics, hashrate, shares, and worker details on maxhash.io." property=og:description><meta content=website property=og:type><meta content=https://maxhash.io/user property=og:url><meta content=maxhash.io property=og:site_name><link href=/static/styles.css rel=stylesheet><body><header class=container><hgroup><h1><a href=/>maxhash.io (beta)</a></h1><p>A high performance Bitcoin solo mining pool</hgroup><nav><ul><li><a href=https://status.maxhash.io>Status</a></ul></nav></header><main class=container><section><h2>Summary</h2><div class=overflow-auto style=margin-top:2em;margin-bottom:1em><span style=font-size:x-large;font-weight:700>User <code id=username></code></span></div><div id=user-stats><span aria-busy=true>Loading user statistics...</span></div></section><section><h2>Workers</h2><div class=overflow-auto id=worker-table><span aria-busy=true>Loading worker statistics...</span></div></section></main><footer class=container><p>© 2025 maxhash.io. All rights reserved.</footer><script defer>// Extract username from URL
+<!--
+SPDX-FileCopyrightText: 2025 maxhash.io <dev@maxhash.io>
+
+SPDX-License-Identifier: AGPL-3.0-only
+--><!doctype html><html lang=en><meta charset=utf-8><meta content="width=device-width,initial-scale=1" name=viewport><meta content="light dark" name=color-scheme><link href=/static/pico.min.css rel=stylesheet><title>User Statistics | maxhash.io Bitcoin Mining Pool</title><meta content="View detailed Bitcoin mining statistics, hashrate, shares, and worker performance for your user account on maxhash.io." name=description><meta content="Bitcoin mining, mining pool, user statistics, hashrate, shares, workers, maxhash.io, solo mining" name=keywords><link href=https://maxhash.io/user rel=canonical><meta content="User Statistics | maxhash.io Bitcoin Mining Pool" property=og:title><meta content="Check your Bitcoin mining user statistics, hashrate, shares, and worker details on maxhash.io." property=og:description><meta content=website property=og:type><meta content=https://maxhash.io/user property=og:url><meta content=maxhash.io property=og:site_name><link href=/static/styles.css rel=stylesheet><body><header class=container><hgroup><h1><a href=/>maxhash.io (beta)</a></h1><p>A high performance Bitcoin solo mining pool</hgroup><nav><ul><li><a href=https://status.maxhash.io>Status</a></ul></nav></header><main class=container><section><h2>Summary</h2><div class=overflow-auto style=margin-top:2em;margin-bottom:1em><span style=font-size:x-large;font-weight:700>User <code id=username></code></span></div><div id=user-stats><span aria-busy=true>Loading user statistics...</span></div></section><section><h2>Workers</h2><div class=overflow-auto id=worker-table><span aria-busy=true>Loading worker statistics...</span></div></section></main><footer class=container><p>© 2025 maxhash.io. All rights reserved.</footer><script defer src=/static/utils.js></script><script defer>// Extract username from URL
 const pathParts=window.location.pathname.split(`/`),username=decodeURIComponent(pathParts[pathParts.length-1]);
 // Fetch and display user statistics
 document.getElementById(`username`).textContent=username,(async()=>{try{let resp=await fetch(`/v1/users/${encodeURIComponent(username)}`);if(resp.status===400||resp.status===404){document.getElementById(`user-stats`).innerHTML=`<em>User not found.</em>`,document.getElementById(`worker-table`).innerHTML=`<em>User not found.</em>`;return}if(!resp.ok)throw Error(`Failed to fetch user stats`);let stats=await resp.json();
@@ -12,7 +16,7 @@ document.getElementById(`user-stats`).innerHTML=`
                 <div class="grid-item"><strong>Hashrate (7d)</strong><br>${stats.hashrate7d}</div>
                 <div class="grid-item"><strong>Shares</strong><br>${stats.shares}</div>
                 <div class="grid-item"><strong>Best Share</strong><br>${stats.bestshare?.toFixed(8)}</div>
-                <div class="grid-item"><strong>Best Ever</strong><br>${stats.bestever}</div>
+                <div class="grid-item"><strong>Best Ever</strong><br>${formatBitcoinDifficulty(stats.bestever)}</div>
                 <div class="grid-item"><strong>Last Share</strong><br>${(/* @__PURE__ */ new Date(stats.lastshare*1e3)).toLocaleString()}</div>
             </div>
             `,stats.worker&&stats.worker.length>0?document.getElementById(`worker-table`).innerHTML=`
@@ -40,7 +44,7 @@ document.getElementById(`user-stats`).innerHTML=`
                       <td>${w.hashrate1d}</td>
                       <td>${w.hashrate7d}</td>
                       <td>${w.shares}</td>
-                      <td>${w.bestever}</td>
+                      <td>${formatBitcoinDifficulty(w.bestever)}</td>
                       <td>${(/* @__PURE__ */ new Date(w.lastshare*1e3)).toLocaleString()}</td>
                     </tr>
                   `).join(``)}
